wayland: Signal about finished move/resize in destroyClient()

We need to emit the clientFinishUserMovedResized signal to notify
effects such as translucency that the interactive move-resize is
finished. Otherwise, the set() animation won't be cancelled and the
window will get stuck frozen.

BUG: 409376


(cherry picked from commit 4ba249eee52ab7ec9e8fdd78af330f15efe27648)